refatorando DetalhesView e atualizando README com setup do banco e execução do projeto